Added video and camp image to html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
                 <p>
                     <a href="https://7501c6c1cec4476ab6c2769987f80418.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
                 </p>
+                <p>
+                <video src="resources/video/excursion.mp4" controls>
+                    Your browser does not support the video tag.
+                </video>
+                </p>
             </section>
+            <section>
+                <h2>Your personal travel guide</h2>
+                <p>
+                    Excursion remembers places you like, and recommends new points of interest around you.
+                </p>
+                <p>
+                    <img src="resources/images/camp.jpg" alt="camp">
+                </p>
+            </section>
+            
         </main>
     </body>
 </html>
