--- a/index.html
+++ b/index.html
@@ -26,11 +26,26 @@
                     Excursion remembers places you like, and recommends new points of interest around you.
                 </p>
                 <p>
-                    <img src="resources/images/camp.jpg" alt="camp">
+                    <img src="resources/images/camp.webp" alt="camp">
+                </p>
+                <p>
+                    <img src="resources/images/phone.webp" alt="phone">
                 </p>
             </section>
-            
+            <section>
+                <h3>
+                    Coming Soon for iPhone and Android
+                </h3>
+                <p>
+                    <a href="https://7501c6c1cec4476ab6c2769987f80418.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
+                </p>
+            </section>
         </main>
+        <footer>
+            <p>
+                &copy; Excursion
+            </p>
+        </footer>
     </body>
 </html>
         
