Update HTML structure and class names

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <h1>Discover hidden places in the world around you</h1>
         </header>
         <main>
-            <section>
-                <p>
+            <section class="video-section">
+                <p class="link-para">
                     <a href="https://7501c6c1cec4476ab6c2769987f80418.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
                 </p>
                 <p>
@@ -20,19 +20,19 @@
                 </video>
                 </p>
             </section>
-            <section>
+            <section class="images-section">
                 <h2>Your personal travel guide</h2>
-                <p>
+                <p class="page-text">
                     Excursion remembers places you like, and recommends new points of interest around you.
                 </p>
-                <p>
+                <p class="camp-para">
                     <img src="resources/images/camp.webp" alt="camp">
                 </p>
-                <p>
+                <p class="phone-para">
                     <img src="resources/images/phone.webp" alt="phone">
                 </p>
             </section>
-            <section>
+            <section class="final-section">
                 <h3>
                     Coming Soon for iPhone and Android
                 </h3>
@@ -42,7 +42,7 @@
             </section>
         </main>
         <footer>
-            <p>
+            <p class="footer-para">
                 &copy; Excursion
             </p>
         </footer>
