--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, minimum-scale=0.1" charset="utf-8">
         <title>excursion-project</title>
         <link rel="stylesheet" href="resources/css/style.css">
     </head>
