--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                     <a href="https://7501c6c1cec4476ab6c2769987f80418.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
                 </p>
                 <p>
-                <video src="resources/video/excursion.mp4" controls>
+                <video autoplay muted loop>
+                    <source src="resources/video/excursion.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 </p>
